--- a/ManagesMotorcycleRentals.API/appsettings.Development.json
+++ b/ManagesMotorcycleRentals.API/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=motodelivery;Username=admin;Password=admin123"
+  },
+  "AllowedHosts": "*"
 }
