--- a/ManagesMotorcycleRentals.Worker/appsettings.json
+++ b/ManagesMotorcycleRentals.Worker/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=motodelivery;Username=admin;Password=admin123"
+    "DefaultConnection": "Host=postgres_db2;Port=5432;Database=motodelivery;Username=admin;Password=admin123"
   }
 }
