--- a/ManagesMotorcycleRentals.API/appsettings.Development.json
+++ b/ManagesMotorcycleRentals.API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=motodelivery;Username=admin;Password=admin123"
+    "DefaultConnection": "Host=postgres_db2;Port=5432;Database=motodelivery;Username=admin;Password=admin123"
   },
   "AllowedHosts": "*"
 }
