--- a/ManagesMotorcycleRentals.API/appsettings.json
+++ b/ManagesMotorcycleRentals.API/appsettings.json
@@ -4,9 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=postgres_db2;Port=5432;Database=motodelivery;Username=admin;Password=admin123"
   },  
-    "ConnectionStrings": {
-      "DefaultConnection": "Host=localhost;Port=5432;Database=motodelivery;Username=admin;Password=admin123"
-    },  
   "AllowedHosts": "*"
 }
