melhorias e git ignore

--- a/ManagesMotorcycleRentals.Worker/appsettings.json
+++ b/ManagesMotorcycleRentals.Worker/appsettings.json
@@ -6,6 +6,12 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Host=postgres_db2;Port=5432;Database=motodelivery;Username=admin;Password=admin123"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=motodelivery;Username=admin;Password=admin123"
+  },
+  "RabbitMq": {
+    "Host": "localhost",
+    //"Host": "rabbitmq",
+    "User": "admin",
+    "Password": "admin123"
   }
 }
