--- a/ManagesMotorcycleRentals.API/docker-compose.yml
+++ b/ManagesMotorcycleRentals.API/docker-compose.yml
@@ -69,22 +69,22 @@ services:
     networks:
       - motodelivery-net
 
-  motodelivery-worker:
-    build:
-      context: ..
-      dockerfile: ManagesMotorcycleRentals.Worker/Dockerfile
-    container_name: motodelivery_worker
-    depends_on:
-      - postgres      
-      - rabbitmq    
-    environment:
-      ASPNETCORE_URLS: http://+:8080
-      ConnectionStrings__DefaultConnection: "Host=postgres_db2;Port=5432;Database=motodelivery;Username=admin;Password=admin123"      
-      RabbitMq__Host: "rabbitmq"
-      RabbitMq__User: "admin"
-      RabbitMq__Pass: "admin123"
-    networks:
-      - motodelivery-net
+  # motodelivery-worker:
+  #   build:
+  #     context: ..
+  #     dockerfile: ManagesMotorcycleRentals.Worker/Dockerfile
+  #   container_name: motodelivery_worker
+  #   depends_on:
+  #     - postgres      
+  #     - rabbitmq    
+  #   environment:
+  #     ASPNETCORE_URLS: http://+:8080
+  #     ConnectionStrings__DefaultConnection: "Host=postgres_db2;Port=5432;Database=motodelivery;Username=admin;Password=admin123"      
+  #     RabbitMq__Host: "rabbitmq"
+  #     RabbitMq__User: "admin"
+  #     RabbitMq__Pass: "admin123"
+  #   networks:
+  #     - motodelivery-net
 
 networks:
   motodelivery-net:
