Melhorias do rabbit.

--- a/ManagesMotorcycleRentals.API/appsettings.json
+++ b/ManagesMotorcycleRentals.API/appsettings.json
@@ -9,7 +9,7 @@
     "DefaultConnection": "Host=localhost;Port=5432;Database=motodelivery;Username=admin;Password=admin123"
   },
   "RabbitMq": {
-    "Host": "rabbitmq",
+    "Host": "localhost",
     "User": "admin",
     "Password": "admin123"
   },
